--- a/index.html
+++ b/index.html
@@ -1,24 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Parked Domain</title>
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-        <div class="wrap">
-            <div class="main">
-                <h1 id="domain">example.com</h1>
-            </div>
-            <div class="off-localhost">
-                <p>Almost time to get off localhost!</p>
-            </div>
-        </div>
-        <script>
-            document.getElementById("domain").innerHTML = window.location.hostname;
-            document.title = window.location.hostname;
-        </script>
-    </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <title>Something Beautiful is Brewing</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #fcf8f7, #fcf8f7);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100vh;
+      margin: 0;
+      color: #4b2e2e;
+    }
+    .container {
+      padding: 30px;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.2em;
+    }
+    .heart {
+      font-size: 3em;
+      animation: pulse 2s infinite;
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+      100% { transform: scale(1); }
+        }
+
+    .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+        
+    .flip-names {
+    font-size: 2em;
+    font-family: sans-serif;
+    position: relative;
+    width: fit-content;
+    height: 1em;
+    }
+
+    .flip-names::before,
+    .flip-names::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: block;
+    opacity: 0;
+    animation: swapNames 4s infinite steps(1);
+    }
+
+    .flip-names::before {
+    content: "Margo & Tim";
+    animation-delay: 0s;
+    opacity: 1;
+    }
+
+    .flip-names::after {
+    content: "Tim & Margo";
+    animation-delay: 2s;
+    }
+
+    .flip-names {
+    white-space: nowrap;
+    }
+
+    @keyframes swapNames {
+    0%, 49.9% { opacity: 0; }
+    50%, 100% { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+ <div class="heart">🎠</div>
+   <div class="flip-names">
+    <p>We've got something magical in store...</p>
+    <p>Come back soon ✨</p>
+    </div>
+  </div>
+</body>
 </html>
